<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/includedToolbar"
        layout="@layout/toolbar_binding" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollRoot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linRoot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView style="@style/CardViewAddEditTransactionRow"
                android:layout_marginTop="@dimen/_10sdp">

                <LinearLayout style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SettingRowLabel"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:text="@string/notification" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Switch
                            android:id="@+id/notificationSwittcCase"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            android:gravity="end"
                            android:src="@drawable/down_arrow"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/CardViewAddEditTransactionRow"
                >

                <LinearLayout style="@style/LinearLayoutAddEditTransactionRow">

                    <TextView
                        style="@style/SettingRowLabel"
                        android:text="@string/currency" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinnerCurrency"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0.0dip"
                            android:layout_weight="1.0"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/regular"
                            android:gravity="center|end"
                            android:src="@drawable/down_arrow"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/CardViewAddEditTransactionRow">

                <LinearLayout style="@style/LinearLayoutAddEditTransactionRow">

                    <TextView
                        style="@style/SettingRowLabel"
                        android:text="@string/date_format" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinnerDateFormat"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0.0dip"
                            android:layout_weight="1.0"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/regular"
                            android:gravity="center|end"
                            android:src="@drawable/down_arrow"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/CardViewAddEditTransactionRow">

                <LinearLayout style="@style/LinearLayoutAddEditTransactionRow">

                    <TextView
                        style="@style/SettingRowLabel"
                        android:text="@string/time_format" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinnerTimeFormat"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0.0dip"
                            android:layout_weight="1.0"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/regular"
                            android:gravity="center|end"
                            android:src="@drawable/down_arrow"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCategory"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/category" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/add_edit_categories" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPaymentMode"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/payment_mode" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/add_edit_payment_mode" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewExportedReports"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/exported_reports" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/exported_pdf_and_excel_reports" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTakeBackup"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/take_backup" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/take_backup_of_data" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLocalBackups"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/local_backups" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/restore_data_from_local_backups" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDriveBackups"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/drive_backups" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/restore_data_from_drive_backups" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBackupTransferGuid"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/backup_transfer_guid" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/steps_for_transfer_backup_to_any_destinations" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardClearAllData"
                style="@style/CardViewAddEditTransactionRow">

                <LinearLayout
                    style="@style/LinearLayoutAddEditTransactionRow"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            style="@style/SettingRowLabel"
                            android:text="@string/clear_data" />

                        <TextView
                            style="@style/SettingRowValue"
                            android:text="@string/clear_all_msg" />
                    </LinearLayout>

                    <ImageView
                        style="@style/ImageViewButtonSmallCommon"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/right_arrow"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
</layout>
