<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/disclosureBg">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/agreeAndContinue"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150.0dip"
            android:layout_height="150.0dip"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_20sdp"
            android:src="@drawable/privacy_policy" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/termsOfService"
                android:textColor="@color/disclosureTitle"
                android:textSize="22.0sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/termsOfServiceSummery"
                android:textColor="@android:color/black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/privacy_policy"
                android:textAllCaps="true"
                android:textColor="@color/disclosureTitle"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/permissionDisclose"
                android:textAllCaps="true"
                android:textColor="@color/disclosureTitle"
                android:textSize="16.0sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/agreeAndContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_selector_disclosure"
        android:onClick="onClick"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:text="@string/acceptAndContinue"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp" />
</RelativeLayout>