<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24.0dip">

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.0"
                        android:fontFamily="@font/regular"
                        android:padding="12.0dip"
                        android:text="@string/pdf_report"
                        android:textColor="@color/actionbar"
                        android:textSize="18.0dip" />

                    <ImageView
                        android:id="@+id/imgAdd"
                        style="@style/ImageViewButtonMediumCommon"
                        android:src="@drawable/close"
                        android:tint="@color/actionbar" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:background="@color/actionbar" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16.0dip"
                    android:layout_marginBottom="16.0dip"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnExport"
                        style="@style/ButtonCommon"
                        android:text="@string/export_to_pdf" />

                    <Button
                        android:id="@+id/btnReports"
                        style="@style/ButtonCommon"
                        android:text="@string/view_reports" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>